compiler/testData/diagnostics/testsWithJvmBackend/duplicateJvmSignature/functionAndProperty/topLevelGetter.fir.kt
<!CONFLICTING_JVM_DECLARATIONS!>val x: Int
    get() = 1<!>
<!CONFLICTING_JVM_DECLARATIONS!>fun getX() = 1<!>
